--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -4,7 +4,7 @@
 # Copyright (C) 2019 P3TERX
 #
 # Copyright (C) 2020 KFERMercer
-#
+# adb
 name: OpenWrt-CI
 
 on:
@@ -113,3 +113,4 @@ jobs:
           file: ./artifact/firmware/*
           tag: ${{ github.ref }}
           file_glob: true
+          
